package nl.suriani.calculator.dsl.model.expression;

public interface Expression {
    Number evaluate();
}
