package nl.suriani.calculator.dsl.model.parser;

public enum TokenType {
    IDENTIFIER,
    L_PAREN,
    R_PAREN,
    NUMBER,
    OPERATOR
}
